; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_input.c_JoyToF.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_input.c_JoyToF.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @JoyToF(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca float, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = sub nsw i32 %4, 32768
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = sitofp i32 %6 to float
  %8 = fpext float %7 to double
  %9 = fdiv double %8, 3.276800e+04
  %10 = fptrunc double %9 to float
  store float %10, float* %3, align 4
  %11 = load float, float* %3, align 4
  %12 = fcmp olt float %11, -1.000000e+00
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store float -1.000000e+00, float* %3, align 4
  br label %14

14:                                               ; preds = %13, %1
  %15 = load float, float* %3, align 4
  %16 = fcmp ogt float %15, 1.000000e+00
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  store float 1.000000e+00, float* %3, align 4
  br label %18

18:                                               ; preds = %17, %14
  %19 = load float, float* %3, align 4
  ret float %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
